--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -59,20 +59,20 @@
 
 
                 <div class="row">
-                    {% for product in products %}
+                    {% for products in product %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
                                 <a href="#">
                                     <img class="card-img-top"
-                                         src="{% static product.img %}"
+                                         src="{% static products.img %}"
                                          alt="">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="#">{{ product.name }}</a>
+                                        <a href="#">{{ products.name }}</a>
                                     </h4>
                                     <h5>{{ product.price }}</h5>
-                                    <p class="card-text">{{ product.description }}</p>
+                                    <p class="card-text">{{ products.description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
                                     <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
