Fixed conflict with branches, but now prices not display on products.html...

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -64,7 +64,7 @@
                             <div class="card h-100">
                                 <a href="#">
                                     <img class="card-img-top"
-                                         src="{% static products.img %}"
+                                         src="{% static products.image %}"
                                          alt="">
                                 </a>
                                 <div class="card-body">
@@ -72,7 +72,7 @@
                                         <a href="#">{{ products.name }}</a>
                                     </h4>
                                     <h5>{{ product.price }}</h5>
-                                    <p class="card-text">{{ products.description }}</p>
+                                    <p class="card-text">{{ products.short_description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
                                     <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
