--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,11 +15,9 @@
 
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Новинки</a>
-                    <a href="#" class="list-group-item">Одежда</a>
-                    <a href="#" class="list-group-item">Обувь</a>
-                    <a href="#" class="list-group-item">Аксессуары</a>
-                    <a href="#" class="list-group-item">Подарки</a>
+                    {% for categories in category %}
+                        <a href="#" class="list-group-item">{{ categories.name }}</a>
+                    {% endfor %}
                 </div>
 
             </div>
@@ -71,7 +69,7 @@
                                     <h4 class="card-title">
                                         <a href="#">{{ products.name }}</a>
                                     </h4>
-                                    <h5>{{ product.price }}</h5>
+                                    <h5>{{ products.price }}</h5>
                                     <p class="card-text">{{ products.short_description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
