--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -69,7 +69,7 @@
                                     <h4 class="card-title">
                                         <a href="#">{{ products.name }}</a>
                                     </h4>
-                                    <h5>{{ products.price }}</h5>
+                                    <h5>{{ products.price }} руб.</h5>
                                     <p class="card-text">{{ products.short_description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
