Understand why this have a problem with render on views. But ajax still doesn't work need to reload page... and added LOGIN URL to setting cuz forget.

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -59,7 +59,7 @@
                 </form>
             </div>
             <div class="col-lg-5">
-              {% include 'basket.html' %}
+              {% include 'baskets/basket.html' %}
             </div>
         </div>
     </div>
