--- a/admins/templates/admins/admin-user-read.html
+++ b/admins/templates/admins/admin-user-read.html
@@ -34,16 +34,7 @@
                             </tr>
                             </tfoot>
                             <tbody>
-                            {% for user in users %}
-                                <tr>
-                                    <td><a href="{% url 'admins:admin_user_update' user.id %}"
-                                           style="color: dodgerblue">{{ user.username }}</a></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td class="text-center"><i class="fas fa-check-circle"></i></td>
-                                    <td class="text-center"><i class="fas fa-check-circle"></i></td>
-                                </tr>
+                            {% for user in object_list %}
                                 <tr>
                                     <td><a href="{% url 'admins:admin_user_update' user.id %}"
                                            style="color: dodgerblue">
