--- a/admins/templates/admins/admin-user-update-delete.html
+++ b/admins/templates/admins/admin-user-update-delete.html
@@ -4,9 +4,9 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование пользователя | {{ selected_user.username }}</h1>
+            <h1 class="mt-4">Редактирование пользователя | {{ user.username }}</h1>
             <div class="card-body">
-                <form action="{% url 'admins:admin_user_update' selected_user.id %}" method="post"
+                <form action="{% url 'admins:admin_user_update' user.id %}" method="post"
                       enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
@@ -51,21 +51,23 @@
                 </form>
 
                 </div>
-                {% if not selected_user.is_active %}
-                    <div class="row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <a href="{% url 'admins:admin_user_recover' selected_user.id %}"
-                               class="btn btn-info btn-block">Восановить</a>
-                        </div>
-                    </div>
-                {% else %}
-                    <div class="row">
-                    <div class="col-lg-12" style="margin-top: 33px;">
-                        <a href="{% url 'admins:admin_user_delete' selected_user.id %}"
-                           class="btn btn-danger btn-block">Удалить</a>
-                    </div>
-                {% endif %}
+{#                {% if not selected_user.is_active %}#}
+{#                    <div class="row">#}
+{#                        <div class="col-lg-12" style="margin-top: 33px;">#}
+{#                            <a href="{% url 'admins:admin_user_recover' selected_user.id %}"#}
+{#                               class="btn btn-info btn-block">Восановить</a>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                {% else %}#}
+            <div class="row">
+                <div class="col-lg-12" style="margin-top: 33px;">
+                    <form action="{% url 'admins:admin_user_delete' user.id %}" method="post">
+                        {% csrf_token %}
+                        <input type="submit" class="btn btn-danger btn-block" value="Удалить">
+                    </form>
+                </div>
             </div>
-        </div>
+{#                {% endif %}#}
+            </div>
     </main>
 {% endblock %}
